k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chest-xray-mlops
  labels:
    name: chest-xray-mlops
